chrome/browser/resources/contextual_tasks/app.css
/* ... */
@media (max-height: 800px) {
  :host([is-zero-state_]:not([enable-native-zero-state-suggestions_]))
      #flexCenterContainer {
    padding-top: 30px;
    height: 30%;
  }

  :host([is-zero-state_]:not([enable-native-zero-state-suggestions_])
      [is-shown-in-tab_]) #flexCenterContainer {
    height: calc(30% - 88px);
  }

  :host([is-zero-state_]:not([enable-native-zero-state-suggestions_]):not([is-shown-in-tab_]))
      #flexCenterContainer {
    padding-top: 50px;
  }
}

@media (max-height: 500px) {
  :host([is-zero-state_]:not([enable-native-zero-state-suggestions_]))
      #flexCenterContainer {
    justify-content: flex-start;
    gap: 18px;
    overflow: hidden;
    padding-top: 20px;
  }

  :host([is-zero-state_][enable-native-zero-state-suggestions_])
      #flexCenterContainer {
    gap: 15px;
    padding-top: 5vh;
    overflow: hidden;
  }
}

#toolbarOverlay {
  align-self: start;
  background-color: var(--search-background-color);
  grid-column: 1;
  grid-row: 1;
  /* Makes the toolbar the correct height. */
  height: 48px;
  position: relative;
  z-index: 2;
}

/* Pseudo element to cover the AIM filter bar while in zero state. */
:host([is-zero-state_]:not([enable-basic-mode_][is-in-basic-mode_])) #toolbarOverlay::after {
  background-color: var(--search-background-color);
  content: '';
  display: block;
  /* The explore bar is 48px, so this adds an 8px buffer margin. */
  height: 56px;
  position: absolute;
  top: 100%;
  width: 100%;
}

.thread-header {
  color: var(--color-zero-state-greeting);
  font-family: var(--google-sans-font);
  font-size: 32px;
  font-weight: 500;
  line-height: 100%;
  margin: 0;
  position: relative;
  z-index: 2;
}

@media (max-width: 520px) {
   .thread-header {
     font-size: 5vw;
   }
}

:host(:not([is-shown-in-tab_])) .thread-header {
  font-size: 28px;
  font-weight: 400;
  line-height: 36px;
  margin: 0 8px 0 0;
}

#composeboxHeaderWrapper {
  background-color: transparent;
  display: none;
  justify-content: center;
  /* Same width so stays at same centering as composebox with flexbox. */
  max-width: var(--composebox-max-width);
  position: relative;
  /* Must equal composebox width to have the same centering. */
  width: var(--composebox-width);
}

:host([is-zero-state_]) #composeboxHeaderWrapper {
  display: flex;
  animation: zero-state-intro 600ms ease forwards;
  opacity: 0;
}

:host([is-zero-state_]:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
  justify-content: flex-start;
  inset-inline-start: 8px;
  /* inset-inline-end: 20px; */
  width: calc(100% - 8px);  /* 20px space on right. */
}

:host([is-zero-state_][is-shown-in-tab_]) #composeboxHeaderWrapper {
  white-space: nowrap;
}

@media (max-width: 480px) {
  :host([is-zero-state_][is-shown-in-tab_]) #flexCenterContainer {
    inset-inline-start: 0;
    width: 100%;
  }
}

@media (max-width: 440px) {
  :host([is-zero-state_]) #toolbarOverlay::after {
    height: 66px;
  }
}

#ghostLoader {
  background-color: var(--search-background-color);
  display: block;
  grid-column: 1;
  grid-row: 2;
  height: 100%;
  overflow: hidden;
  width: 100%;
}

@keyframes zero-state-intro {
  from {
    opacity: 0;
    transform: translateY(180px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.name-shimmer {
  --bg-gradient: linear-gradient(
    to bottom,
    rgba(49, 134, 255, 1) 10%,
    rgba(169, 168, 255, 1) 30%,
    rgba(169, 168, 255, 1) 40%,
    var(--color-zero-state-greeting) 100%
  );
  will-change: background-position;
  color: transparent;
  background-image: var(--bg-gradient);
  background-clip: text;
  background-size: auto 700%;
  position: relative;
  animation: textShimmerAnimation 1s cubic-bezier(0.3, 0, 1, 1) both;
}

.name-shimmer-dark {
  --bg-gradient: linear-gradient(
    to bottom,
    rgba(49, 134, 255, 1) 10%,
    rgba(169, 168, 255, 1) 50%,
    var(--color-zero-state-greeting) 70%
  );
  will-change: background-position;
  color: transparent;
  background-image: var(--bg-gradient);
  background-clip: text;
  background-size: auto 700%;
  position: relative;
  animation: textShimmerAnimation 1s cubic-bezier(0.3, 0, 1, 1) both;
  background-color: var(--color-zero-state-greeting);
}

@keyframes textShimmerAnimation {
  0% {
    background-position: 50% 0%;
  }
  100% {
    background-position: 50% 100%;
  }
}

